# mstr-rest-requests

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Pipfile  README.md  pyproject.toml  serverless.yml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  docs.yml  pythonpackage.yml  pythonpublish.yml
docs/: api.rst  conf.py  index.rst
docs/usage/: installation.rst  quickstart.rst
mstr/: __init__.py
mstr/requests/: __init__.py
mstr/requests/credentials/: __init__.py  aws.py  azure.py  gcp.py
mstr/requests/rest/: authenticated_session.py  base.py  errors.py  exceptions.py  execution_status.py  mixins.py  protocols.py  session.py
mstr/requests/rest/api/: __init__.py  auth.py  cubes.py  datasets.py  objects.py  projects.py  sessions.py  utils.py
mstr_rest_requests/: base.py  errors.py  exceptions.py  execution_status.py  session.py  utils.py
mstr_rest_requests/api/: __init__.py  auth.py  sessions.py  utils.py
scripts/: deploy_serverless.sh
src/mstr_rest_requests/: __init__.py  errors.py  execution_status.py  mixins.py  session.py
src/mstr_rest_requests/api/: __init__.py  auth.py  cubes.py  datasets.py  objects.py  sessions.py  utils.py
tests/: test_auth.py  test_base.py  test_base_session.py  test_credentials.py  test_exceptions.py  test_general.py  test_mixins.py  test_persistence.py  test_projects.py  test_rest_api.py
