[project]
name = "mstr-rest-requests"
version = "0.16.0"
description = "Easily make requests of the MicroStrategy REST API"
authors = [{ name = "Paul Bailey", email = "bailey@dreamshake.net" }]
requires-python = ">=3.10, <4"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "requests",
    "requests-toolbelt",
]

[project.optional-dependencies]
aws = ["boto3"]
azure = ["azure-identity", "azure-keyvault-secrets"]
gcp = ["google-cloud-secret-manager"]

[project.urls]
Repository = "https://github.com/paulbailey/mstr-rest-requests"

[dependency-groups]
dev = [
    "pytest",
    "sphinx>=3.2.1,<4",
    "pytest-cov>=7,<8",
    "mypy>=1.0.0,<2",
    "types-requests>=2.25.11,<3",
    "black>=26.1,<27",
]

[tool.hatch.build.targets.sdist]
include = ["mstr"]

[tool.hatch.build.targets.wheel]
include = ["mstr"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
