[metadata]
name = mstr-rest-requests
author = Paul Bailey
author_email = bailey@dreamshake.net
description = Easily make requests of the MicroStrategy REST API
long_description = file: README.md
url = https://github.com/paulbailey/mstr-rest-requests
install_requires = requests, requests-toolbelt
packages=find:

[aliases]
test=pytest
